--- a/src/br/com/sistema/telas/TelaPrincipal.form
+++ b/src/br/com/sistema/telas/TelaPrincipal.form
@@ -130,14 +130,14 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="panePrincipal" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="lblDataAtual" max="32767" attributes="0"/>
-                  <Component id="lblUsuario1" alignment="1" pref="143" max="32767" attributes="0"/>
+                  <Component id="lblUsuario" alignment="1" pref="143" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -149,7 +149,7 @@
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="lblUsuario1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="lblUsuario" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -210,13 +210,16 @@
         <Property name="text" type="java.lang.String" value="usuario teste"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="lblUsuario1">
+    <Component class="javax.swing.JLabel" name="lblUsuario">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Manjari Regular" size="18" style="0"/>
         </Property>
         <Property name="text" type="java.lang.String" value="usuario teste"/>
       </Properties>
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+      </AuxValues>
     </Component>
   </SubComponents>
 </Form>
